--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,6 @@ buildscript {
 
         dslpermission_version_code = 4
         dslpermission_version_name = '2.0.3'
-
     }
 
     repositories {
@@ -62,8 +61,8 @@ buildscript {
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_plugin_version"
 
         // Required plugins added to classpath to facilitate pushing to JCenter/Bintray
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_version"
-        classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
     }
 }
 
@@ -71,6 +70,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
