--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,6 +19,8 @@ import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.stelma'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
