--- a/coroutinespermission/build.gradle
+++ b/coroutinespermission/build.gradle
@@ -19,6 +19,8 @@ import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.stelma'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -68,32 +70,3 @@ ktlint {
 // Bintray info
 final def LIB_MODULE_NAME = 'coroutinespermission'
 final def LIB_MODULE_DESC = 'Android library to request permissions in coroutines without callbacks.'
-
-ext {
-    bintrayRepo = 'eazypermissions'
-    bintrayName = LIB_MODULE_NAME
-
-    publishedGroupId = GROUP
-    libraryName = LIB_MODULE_NAME
-    artifact = LIB_MODULE_NAME // Has to be same as your library module nameOfLib
-
-    libraryDescription = LIB_MODULE_DESC
-
-    // Your github repo link
-    siteUrl = rootProject.ext.libPomUrl
-    gitUrl = rootProject.ext.libPomGitUrl
-    githubRepository = rootProject.ext.libGithubRepo
-
-    libraryVersion = rootProject.ext.coroutinespermission_version_name
-
-    developerId = POM_DEVELOPER_ID
-    developerName = POM_DEVELOPER_NAME
-    developerEmail = POM_DEVELOPER_EMAILID
-
-    licenseName = POM_LICENCE_NAME
-    licenseUrl = POM_LICENCE_URL
-    allLicenses = [POM_ALL_LICENCES]
-}
-
-apply from: '../scripts/installv1.gradle'
-apply from: '../scripts/bintrayv1.gradle'
